--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,6 @@ current_version = 0.0.7
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:cmd/root.go]
+[bumpversion:file:menu/menu.go]
 search = Version: "{current_version}",
 replace = Version: "{new_version}",
