--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,5 +6,5 @@ search = {current_version}
 replace = {new_version}
 
 [bumpversion:file:menu/menu.go]
-search = Version: "{current_version}",
-replace = Version: "{new_version}",
+search = const Version = "{current_version}"
+replace = const Version = "{new_version}"
